# sqlite-fs

./: .gitignore  README.md  idea.md  plan.v2.md  plan.v3.md  plan.v4.md  plan.v5.md  plan.v6.md  pyproject.toml
archive/: PLAN.md  TRACE_SKILL_PLAN.md
package/traces/: test_group_not_owner_uses_group_bits_not_owner.trace.md  test_link_creates_hard_link.trace.md  test_parse_rejects_dot_components.trace.md  (+3 more)
rust/: Cargo.toml  README.md  plan.md  plan.rust.md  plan.v7.md
rust/package/specs/src/: blobs.rs.engspec  cli.rs.engspec  entries.rs.engspec  errors.rs.engspec  fdtable.rs.engspec  fs.rs.engspec  fsck.rs.engspec  lib.rs.engspec  locks.rs.engspec  mkfs.rs.engspec  nodes.rs.engspec  paths.rs.engspec  perms.rs.engspec  schema.rs.engspec  symlinks.rs.engspec  types.rs.engspec  watch.rs.engspec  xattrs.rs.engspec
rust/package/specs/src/fuse/: adapter.rs.engspec  cli.rs.engspec  mod.rs.engspec
rust/package/specs/tests/: conftest.rs.engspec  test_benchmarks.rs.engspec  test_blobs.rs.engspec  test_crash_safety.rs.engspec  test_durability.rs.engspec  test_fs.rs.engspec  test_fuse_basic.rs.engspec  test_fuse_locks.rs.engspec  test_fuse_permissions.rs.engspec  test_fuse_symlinks.rs.engspec  test_fuse_xattrs.rs.engspec  test_hardlinks.rs.engspec  test_interop.rs.engspec  test_locks.rs.engspec  test_nodes.rs.engspec  test_open_flags.rs.engspec  test_paths.rs.engspec  test_perms.rs.engspec  test_rename.rs.engspec  test_symlinks.rs.engspec  test_watch.rs.engspec  test_xattrs.rs.engspec
rust/package/traces/: test_posix_exclusive_blocks_shared.trace.md  test_root_execute_requires_at_least_one_x_bit.trace.md  test_watch_create_fires_create_event.trace.md
rust/src/: blobs.rs  entries.rs  errors.rs  fdtable.rs  fs.rs  fsck.rs  lib.rs  locks.rs  mkfs.rs  nodes.rs  paths.rs  perms.rs  schema.rs  symlinks.rs  types.rs  watch.rs  xattrs.rs
rust/src/fuse/: adapter.rs  mod.rs
scripts/: bench.py  bench_compare.py
src/sqlite_fs/: __init__.py  blobs.py  (+16 more)
tests/: conftest.py  test_blobs.py  test_crash_safety.py  test_durability.py  test_fs.py  test_hardlinks.py  test_locks.py  test_nodes.py  test_open_flags.py  test_paths.py  test_perms.py  test_rename.py  test_symlinks.py  test_watch.py  test_xattrs.py
(+46 files in other folders)
