[package]
name = "sqlite-fs"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["sqlite-fs contributors"]
description = "Durable, performant FUSE filesystem backed by SQLite — Rust port"
license = "MIT"
readme = "README.md"
repository = "https://github.com/misko/sqlite-fs"

[lib]
name = "sqlite_fs"
path = "src/lib.rs"

# The CLI binary will live at src/bin/sqlite-fs.rs once src/cli.rs is implemented.
# [[bin]]
# name = "sqlite-fs"
# path = "src/bin/sqlite-fs.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
libc = "0.2"
thiserror = "1.0"
bitflags = "2"
fuser = { version = "0.14", optional = true }

[features]
default = []
fuse = ["dep:fuser"]
all = ["fuse"]

[dev-dependencies]
tempfile = "3"
nix = { version = "0.27", features = ["fs", "signal", "process"] }
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
